--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,5 +16,5 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
     
-    <script src="{{ "/analytics.js" | prepend: site.baseurl | prepend: site.url }}"></script>
+    <script src="{{ "/js/analytics.js" | prepend: site.baseurl | prepend: site.url }}"></script>
 </head>
