fixed filename case

--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
       </button>
             <a class="navbar-brand" href="{{ site.baseurl }}/">
-                <span><img src="{{ "/svg/Virhex.svg" | relative_url }}" alt="{{ site.title }}"></span>
+                <span><img src="{{ "/svg/virhex.svg" | relative_url }}" alt="{{ site.title }}"></span>
             </a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
